--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,22 +1,22 @@
 <header class="header">
   <div class="header__container container">
-    <a href="#" class="header__logo">
+    <a href="./#hero" class="header__logo">
       Zyntra<span class="header__logo-accent">Brain</span>
     </a>
 
     <nav class="header__nav">
       <ul class="header__menu">
-        <li class="header__item"><a href="#hero" class="header__link">Главная</a></li>
-        <li class="header__item"><a href="#about" class="header__link">О платформе</a></li>
-        <li class="header__item"><a href="#benefits" class="header__link">Преимущества</a></li>
-        <li class="header__item"><a href="#innovations" class="header__link">Инновации</a></li>
-        <li class="header__item"><a href="#blog" class="header__link">Блог</a></li>
-        <li class="header__item"><a href="#cases" class="header__link">Кейсы</a></li>
+        <li class="header__item"><a href="./#hero" class="header__link">Главная</a></li>
+        <li class="header__item"><a href="./#about" class="header__link">О платформе</a></li>
+        <li class="header__item"><a href="./#benefits" class="header__link">Преимущества</a></li>
+        <li class="header__item"><a href="./#innovations" class="header__link">Инновации</a></li>
+        <li class="header__item"><a href="./#blog" class="header__link">Блог</a></li>
+        <li class="header__item"><a href="./#cases" class="header__link">Кейсы</a></li>
       </ul>
     </nav>
 
     <div class="header__actions">
-      <a href="#contact" class="header__btn btn btn--primary">Связаться</a>
+      <a href="./#contact" class="header__btn btn btn--primary">Связаться</a>
       <button class="header__burger" aria-label="Открыть меню">
         <i data-lucide="menu"></i>
       </button>
