--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer__grid">
       <div class="footer__col">
-        <a href="#" class="footer__logo">
+        <a href="#hero" class="footer__logo">
           Zyntra<span class="footer__logo-accent">Brain</span>
         </a>
         <p class="footer__desc">
@@ -13,22 +13,22 @@
       <div class="footer__col">
         <h3 class="footer__title">Меню</h3>
         <ul class="footer__list">
-          <li><a href="#about" class="footer__link">О нас</a></li>
-          <li><a href="#blog" class="footer__link">Блог</a></li>
-          <li><a href="#innovations" class="footer__link">Технологии</a></li>
-          <li><a href="#contact" class="footer__link">Контакты</a></li>
+          <li><a href="./#about" class="footer__link">О нас</a></li>
+          <li><a href="./#blog" class="footer__link">Блог</a></li>
+          <li><a href="./#innovations" class="footer__link">Технологии</a></li>
+          <li><a href="./#contact" class="footer__link">Контакты</a></li>
         </ul>
       </div>
 
       <div class="footer__col">
         <h3 class="footer__title">Информация</h3>
         <ul class="footer__list">
-          <li><a href="privacy.html" class="footer__link">Privacy Policy</a></li>
-          <li><a href="cookies.html" class="footer__link">Cookies Policy</a></li>
-          <li><a href="terms.html" class="footer__link">Terms of Use</a></li>
-          <li><a href="return.html" class="footer__link">Return Policy</a></li>
-          <li><a href="disclaimer.html" class="footer__link">Disclaimer</a></li>
-          <li><a href="personal-data-policy.html" class="footer__link">Personal Data</a></li>
+          <li><a href="./privacy.html" class="footer__link">Политика конфиденциальности</a></li>
+          <li><a href="./cookies.html" class="footer__link">Политика Cookie</a></li>
+          <li><a href="./terms.html" class="footer__link">Условия использования</a></li>
+          <li><a href="./return.html" class="footer__link">Политика возврата средств</a></li>
+          <li><a href="./disclaimer.html" class="footer__link">Отказ от ответственности</a></li>
+          <li><a href="./personal-data-policy.html" class="footer__link">Политика обработки данных</a></li>
         </ul>
       </div>
 
