--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -47,7 +47,7 @@
                 </ul>
             </div>
             <div class="about__image">
-                <img src="img/placeholder.png" alt="AI Interface" class="img-glass">
+                <img src="/img/one.jpg" alt="AI Interface" class="img-glass">
             </div>
         </div>
     </div>
@@ -129,36 +129,36 @@
         <div class="blog__grid">
             <article class="blog-card">
                 <div class="blog-card__image">
-                    <img src="img/placeholder.png" alt="Blog 1">
+                    <img src="/img/two.jpg" alt="Blog 1">
                 </div>
                 <div class="blog-card__content">
                     <div class="blog-card__meta">AI Trends • 5 мин</div>
                     <h3 class="blog-card__title">Как AI меняет рынок услуг Франции</h3>
                     <p class="blog-card__excerpt">Разбираем реальные кейсы внедрения ботов в малый бизнес Лиона и
                         Парижа.</p>
-                    <a href="#" class="blog-card__link">Читать далее <i data-lucide="arrow-right"></i></a>
+                    <a href="#contact" class="blog-card__link">Читать далее <i data-lucide="arrow-right"></i></a>
                 </div>
             </article>
             <article class="blog-card">
                 <div class="blog-card__image">
-                    <img src="img/placeholder.png" alt="Blog 2">
+                    <img src="/img/three.jpg" alt="Blog 2">
                 </div>
                 <div class="blog-card__content">
                     <div class="blog-card__meta">Tutorial • 10 мин</div>
                     <h3 class="blog-card__title">Пошаговый путь: от идеи до бота</h3>
                     <p class="blog-card__excerpt">Легко разобраться без опыта. Инструкция для новичков.</p>
-                    <a href="#" class="blog-card__link">Читать далее <i data-lucide="arrow-right"></i></a>
+                    <a href="#contact" class="blog-card__link">Читать далее <i data-lucide="arrow-right"></i></a>
                 </div>
             </article>
             <article class="blog-card">
                 <div class="blog-card__image">
-                    <img src="img/placeholder.png" alt="Blog 3">
+                    <img src="/img/four.jpg" alt="Blog 3">
                 </div>
                 <div class="blog-card__content">
                     <div class="blog-card__meta">Strategy • 7 мин</div>
                     <h3 class="blog-card__title">Стратегия роста на 2025 год</h3>
                     <p class="blog-card__excerpt">Воплотите мечты в реальность, используя автоматизацию продаж.</p>
-                    <a href="#" class="blog-card__link">Читать далее <i data-lucide="arrow-right"></i></a>
+                    <a href="#contact" class="blog-card__link">Читать далее <i data-lucide="arrow-right"></i></a>
                 </div>
             </article>
         </div>
@@ -184,7 +184,7 @@
                         <span class="val">+45%</span>
                         <span class="label">Обработка заявок</span>
                     </div>
-                    <img src="img/placeholder.png" alt="Case 1" class="case-card__bg">
+                    <img src="/img/five.jpg" alt="Case 1" class="case-card__bg">
                 </div>
             </div>
 
@@ -197,7 +197,7 @@
                         <span class="val">x3.2</span>
                         <span class="label">Рост конверсии</span>
                     </div>
-                    <img src="img/placeholder.png" alt="Case 2" class="case-card__bg">
+                    <img src="/img/six.jpg" alt="Case 2" class="case-card__bg">
                 </div>
             </div>
 
@@ -210,7 +210,7 @@
                         <span class="val">24/7</span>
                         <span class="label">Работа без выходных</span>
                     </div>
-                    <img src="img/placeholder.png" alt="Case 3" class="case-card__bg">
+                    <img src="/img/seven.jpg" alt="Case 3" class="case-card__bg">
                 </div>
             </div>
 
